# RIS_App

./: .gitignore  LICENSE  README.md  a  launcher_ctk.py  pyproject.toml
.github/workflows/: build-release.yml  release.yml
app/: auto_updater.py  main.py  plugin_base.py  plugin_manager.py
app/plugins/: simple_plugin.py
assets/: server.json
core/: app_info.py  logic.py  servers.py
resources/: update_manifest.json
ris_app/: __init__.py  __main__.py  config.py  main.py
ris_app/core/: plugin_base.py  plugin_manager.py  registry.py  updater.py
ris_app/data/: catalog.json  registry.json
ris_app/plugins/: __init__.py
ris_app/plugins/hello_world/: __init__.py  plugin.json  plugin.py
ris_app/plugins/sample_ris_tool/: __init__.py  plugin.json  plugin.py
ris_app/utils/: __init__.py  io.py  log.py  version.py
scripts/: create_demo_update.py  gen_catalog.py  get_version.py
tests/: test_plugins.py
ui/: main_window.py
ui/pages/: settings.py
