[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ris-app"
version = "0.1.0"
description = "RIS_app - Plugin-based toolkit with auto updates"
authors = [
  { name = "KaRyuu" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "packaging"
]

[project.scripts]
ris = "ris_app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ris_app*", "scripts*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "UP", "I", "N"]

[tool.ruff.lint.isort]
known-first-party = ["ris_app"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
  "tests"
]
